--- a/vignettes/pkgdown/examples/overview.Rmd
+++ b/vignettes/pkgdown/examples/overview.Rmd
@@ -11,12 +11,12 @@ The `quallmer` package currently includes the following predefined tasks:
 
 | **Task** | **Function** | **Description** | **Output** |
 |-----------|---------------|-----------------|-------------|
-| [**Sentiment analysis**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_sentiment.html) | `task_sentiment()` | Rates overall sentiment of text. | Sentiment score (`-1` to `1`) and explanation |
-| [**Stance detection**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_stance.html) | `task_stance()` | Identifies stance/position taking toward a topic. | Stance label (pro/neutral/contra) and explanation |
-| [**Ideological scaling**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_ideology.html) | `task_ideology()` | Places text on an ideological scale (0–10) for a specified dimension. | Ideological score (`0` to `10`) and explanation |
-| [**Topic salience**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_salience.html) | `task_salience()` | Ranks salience of specified topics in text. | Ranked list of topics and explanation |
-| [**Fact-checking**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/task_fact.html) | `task_fact_check()` | Verifies factual claims in text. | Truthfulness score (0-10, with 10 signalling highest confidence in truthfulness), misleading topics (if any) and explanation |
+| [**Sentiment analysis**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/codebook_sentiment.html) | `task_sentiment()` | Rates overall sentiment of text. | Sentiment score (`-1` to `1`) and explanation |
+| [**Stance detection**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/codebook_stance.html) | `task_stance()` | Identifies stance/position taking toward a topic. | Stance label (pro/neutral/contra) and explanation |
+| [**Ideological scaling**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/codebook_ideology.html) | `task_ideology()` | Places text on an ideological scale (0–10) for a specified dimension. | Ideological score (`0` to `10`) and explanation |
+| [**Topic salience**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/codebook_salience.html) | `task_salience()` | Ranks salience of specified topics in text. | Ranked list of topics and explanation |
+| [**Fact-checking**](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/codebook_fact.html) | `task_fact_check()` | Verifies factual claims in text. | Truthfulness score (0-10, with 10 signalling highest confidence in truthfulness), misleading topics (if any) and explanation |
 
 
 
-If you wish to create custom tasks tailored to your specific research questions and data types, you can use the `task()` function. This function allows you to specify the system prompt and output structure, enabling you to customize the annotation process according to your needs. For a tutorial on how to create custom tasks, please refer to our [custom tasks tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html).
+If you wish to create custom codebooks tailored to your specific research questions and data types, you can use the `qlm_codebook()` function. This function allows you to specify the instructions and output structure, enabling you to customize the annotation process according to your needs. For a tutorial on how to create custom codebooks, please refer to our [custom tasks tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html).
