--- a/vignettes/pkgdown/tutorials/validate.Rmd
+++ b/vignettes/pkgdown/tutorials/validate.Rmd
@@ -3,7 +3,7 @@ title: "Using the Validate App"
 output: html_document
 ---
 
-Our `quallmer` package includes the Validate App, a user-friendly interface that allows researchers to manually code data, review LLM-generated annotations, and calculate intercoder reliability scores such as Krippendorff's alpha and Fleiss' kappa or compare LLM-annotations against a gold standard for accuracy scores. This tutorial will guide you through the steps of using the Validate App effectively. If you prefer to work programmatically, we also provide instructions on how to calculate agreement scores by simply using the `validate()` function at the end of this tutorial.
+Our `quallmer` package includes the Validate App, a user-friendly interface that allows researchers to manually code data, review LLM-generated annotations, and calculate inter-rater reliability scores such as Krippendorff's alpha and Fleiss' kappa or compare LLM-annotations against a gold standard for accuracy scores. This tutorial will guide you through the steps of using the Validate App effectively. If you prefer to work programmatically, we also provide instructions on how to calculate agreement scores by simply using the `validate()` function at the end of this tutorial.
 
 ## Launching the Validate App
 To launch the Validate App, you can use the `validate_app()` function from the `quallmer` package. Make sure you have the package loaded in your R environment. Then, simply call the `validate_app()` function. This will open the Validate App in a new window or tab in your web browser.
@@ -28,9 +28,9 @@ The app provides an intuitive interface for navigating through the data and maki
 
 ## Calculating validation scores
 
-After completing the manual coding and reviewing the LLM-generated annotations, the Validate App provides functionality to calculate intercoder reliability scores or compare LLM annotations against a gold standard. You can choose from various metrics, such as Krippendorff's alpha, Cohen's or Fleiss' kappa, to assess the agreement between different coders or between your manual codes and the LLM annotations or, as shown below, between multiple LLM runs. The app also provides some interpretation guidelines to help you understand the results. If you have a gold standard available, the app will calculate accuracy metrics such as precision, recall, and F1-score.
+After completing the manual coding and reviewing the LLM-generated annotations, the Validate App provides functionality to calculate inter-rater reliability scores or compare LLM annotations against a gold standard. You can choose from various metrics, such as Krippendorff's alpha, Cohen's or Fleiss' kappa, to assess the agreement between different coders or between your manual codes and the LLM annotations or, as shown below, between multiple LLM runs. The app also provides some interpretation guidelines to help you understand the results. If you have a gold standard available, the app will calculate accuracy metrics such as precision, recall, and F1-score.
 
-### Example of intercoder reliability scores (no gold standard available)
+### Example of inter-rater reliability scores (no gold standard available)
 
 ![](pics/reliab.png){width=70%}
 
