--- a/vignettes/pkgdown/examples/codebook_ideology.Rmd
+++ b/vignettes/pkgdown/examples/codebook_ideology.Rmd
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The `annotate()` function with a predefined `task_ideology()` allows you to perform ideological scaling (0-10) on texts regarding a specified ideological dimension. In this example, we will demonstrate how to use the `task_ideology()` for ideology detection on a sample corpus of innaugural speeches from U.S. presidents. We will use the dimension "inclusive–exclusive" as an example. To refine the task, we will also provide a definition of the dimension (optional).
+The `qlm_code()` function with the built-in `task_ideology()` codebook allows you to perform ideological scaling (0-10) on texts regarding a specified ideological dimension. In this example, we will demonstrate how to use the `task_ideology()` codebook for ideology detection on a sample corpus of innaugural speeches from U.S. presidents. We will use the dimension "inclusive–exclusive" as an example. To refine the codebook, we will also provide a definition of the dimension (optional).
 
 ### Loading packages and data
 
@@ -25,18 +25,18 @@ library(quallmer)
 data_corpus_inaugural <- quanteda::data_corpus_inaugural[57:60]
 
 ```
-### Using `annotate()` for ideological scaling of texts
+### Using `qlm_code()` for ideological scaling of texts
 ```{r ideology}
 # Define ideological dimension
 dimension <- "inclusive–exclusive"
 # Provide definition for the dimension
-definition <- "Inclusive language emphasizes equal rights, diversity, pluralism, 
-and protection of minorities, whereas exclusive language emphasizes exclusion 
+definition <- "Inclusive language emphasizes equal rights, diversity, pluralism,
+and protection of minorities, whereas exclusive language emphasizes exclusion
 of groups, national homogeneity, and restricting rights."
-# Apply predefined ideology task with task_ideology() in the annotate() function
-result <- annotate(data_corpus_inaugural, task = task_ideology(dimension, definition),
-                   model_name = "openai/gpt-4o",
-                   params = list(temperature = 0))
+# Apply predefined ideology codebook with task_ideology() in the qlm_code() function
+result <- qlm_code(data_corpus_inaugural, codebook = task_ideology(dimension, definition),
+                   model = "openai/gpt-4o",
+                   temperature = 0)
 ```
 ```{r display_results, echo = FALSE}
 # results table
@@ -47,29 +47,29 @@ result %>%
   column_spec(3)
 ```
 ### Adjusting the ideology scaling task
-You can customize the ideological scaling task by defining your own task with `task()` (for a more detailed explanation, [see our "Defining custom tasks" tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html)).
+You can customize the ideological scaling task by defining your own codebook with `qlm_codebook()` (for a more detailed explanation, [see our "Defining custom tasks" tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html)).
 For example, you might like to change the scale from 0-10 to -5 to +5.
 ```{r custom_ideology}
-custom_ideology <- task(
+custom_ideology <- qlm_codebook(
     name = "Ideological scaling",
-    system_prompt = paste0(
-      "You are an expert political scientist performing ideological text scaling.",
+    instructions = paste0(
       "Task:",
       "- Read each short text carefully.",
       "- Place the text on a -5 to +5 scale for the following ideological dimension: ",
-      dimension, 
+      dimension,
       definition
     ),
-    type_def = ellmer::type_object(
-      score       = ellmer::type_integer("Ideological position on the specified dimension (0–10, where -5 = first pole, +5 = second pole)"),
+    schema = ellmer::type_object(
+      score       = ellmer::type_integer("Ideological position on the specified dimension (-5 to +5, where -5 = first pole, +5 = second pole)"),
       explanation = ellmer::type_string("Brief justification for the assigned score, referring to specific elements in the text")
     ),
+    role = "You are an expert political scientist performing ideological text scaling.",
     input_type = "text"
   )
-# Apply the custom task
-custom_result <- annotate(data_corpus_inaugural, task = custom_ideology,
-                          model_name = "openai/gpt-4o",
-                          params = list(temperature = 0))
+# Apply the custom codebook
+custom_result <- qlm_code(data_corpus_inaugural, codebook = custom_ideology,
+                          model = "openai/gpt-4o",
+                          temperature = 0)
 ```
 ```{r display_results_custom, echo = FALSE}
 # custom results table
@@ -80,4 +80,4 @@ custom_result %>%
   column_spec(3)
 ```
 
-In this example, we demonstrated how to use the `task_ideology()` for scaling texts regarding their ideological position on a specified dimension. We also showed how to customize the task using the `task()` function for more tailored annotation needs, e.g., changing the scale from 0-10 to -5 to +5. Now you can apply these techniques to your own text data for ideological analysis!
+In this example, we demonstrated how to use the `task_ideology()` codebook for scaling texts regarding their ideological position on a specified dimension. We also showed how to customize the codebook using the `qlm_codebook()` function for more tailored annotation needs, e.g., changing the scale from 0-10 to -5 to +5. Now you can apply these techniques to your own text data for ideological analysis!
