--- a/vignettes/pkgdown/examples/codebook_salience.Rmd
+++ b/vignettes/pkgdown/examples/codebook_salience.Rmd
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The `annotate()` function with a predefined `task_salience()` can be used to identify and rank the salience of topics discussed in texts. In this example, we will demonstrate how to apply this task to a sample corpus of innaugural speeches from US presidents.
+The `qlm_code()` function with the built-in `task_salience()` codebook can be used to identify and rank the salience of topics discussed in texts. In this example, we will demonstrate how to apply this codebook to a sample corpus of innaugural speeches from US presidents.
 
 ### Loading packages and data
 
@@ -25,13 +25,13 @@ library(quallmer)
 data_corpus_inaugural <- quanteda::data_corpus_inaugural[57:60]
 
 ```
-### Using `annotate()` for salience of ANY topics discussed in texts
+### Using `qlm_code()` for salience of ANY topics discussed in texts
 ```{r salience}
 
-# Apply predefined salience task with task_salience() in the annotate() function
-result <- annotate(data_corpus_inaugural, task = task_salience(),
-                   model_name = "openai/gpt-4o",
-                   params = list(temperature = 0))
+# Apply predefined salience codebook with task_salience() in the qlm_code() function
+result <- qlm_code(data_corpus_inaugural, codebook = task_salience(),
+                   model = "openai/gpt-4o",
+                   temperature = 0)
 ```
 ```{r display_results, echo = FALSE}
 # results table
@@ -41,15 +41,15 @@ result %>%
   kable_styling(bootstrap_options = c("striped", "hover")) %>%
   column_spec(3)
 ```
-### Using `annotate()` for salience of a SPECIFIED LIST of topics discussed in texts
+### Using `qlm_code()` for salience of a SPECIFIED LIST of topics discussed in texts
 ```{r salience2}
 
 # Define a list of topics to focus on
 topics <- c("economy", "health", "education", "environment", "foreign policy")
-# Apply predefined salience task with task_salience() in the annotate() function
-result <- annotate(data_corpus_inaugural, task = task_salience(topics),
-                   model_name = "openai/gpt-4o",
-                   params = list(temperature = 0))
+# Apply predefined salience codebook with task_salience() in the qlm_code() function
+result <- qlm_code(data_corpus_inaugural, codebook = task_salience(topics),
+                   model = "openai/gpt-4o",
+                   temperature = 0)
 ```
 ```{r display_results2, echo = FALSE}
 # results table
@@ -62,12 +62,10 @@ result %>%
 
 ### Adjusting the task_salience() so it also returns the stance for each topic
 ```{r custom_task}
-# Customizing the task to include the stance for each topic
-custom_task <- task(
+# Customizing the codebook to include the stance for each topic
+custom_codebook <- qlm_codebook(
   name = "Salience and stance of topics",
-  system_prompt = paste(
-    "You are an expert analysing the content of texts.",
-    "",
+  instructions = paste(
     "Task:",
     "- Read the text carefully.",
     "- Identify and rank the salience of the following topics: economy, health, education, environment, foreign policy.",
@@ -85,7 +83,7 @@ custom_task <- task(
     "- `explanation`: a brief justification explaining why the topics were ordered and how stance was determined.",
     sep = "\n"
   ),
-  type_def = ellmer::type_object(
+  schema = ellmer::type_object(
     topic_stance = ellmer::type_array(
       ellmer::type_string("Topic and stance label combined (e.g., 'economy: pro'), ranked by salience.")
     ),
@@ -93,13 +91,14 @@ custom_task <- task(
       "Brief justification for the salience ordering and stance classification."
     )
   ),
+  role = "You are an expert analysing the content of texts.",
   input_type = "text"
 )
 
-# Apply the customized task in the annotate() function
-custom_result <- annotate(data_corpus_inaugural, task = custom_task,
-                   model_name = "openai/gpt-4o",
-                   params = list(temperature = 0))
+# Apply the customized codebook in the qlm_code() function
+custom_result <- qlm_code(data_corpus_inaugural, codebook = custom_codebook,
+                   model = "openai/gpt-4o",
+                   temperature = 0)
 ```
 ```{r display_custom_results, echo = FALSE}
 # custom results table
@@ -109,4 +108,4 @@ custom_result %>%
   kable_styling(bootstrap_options = c("striped", "hover")) %>%
   column_spec(3)
 ```
-In this example, we demonstrated how to use the `task_salience()` for identifying and ranking topics discussed in texts, both with and without a predefined list of topics. Additionally, we showed how to customize the task to include stance classification for each topic. This showcases the flexibility of the `annotate()` function and the `task` framework in `quallmer` for various text analysis tasks.
+In this example, we demonstrated how to use the `task_salience()` codebook for identifying and ranking topics discussed in texts, both with and without a predefined list of topics. Additionally, we showed how to customize the codebook to include stance classification for each topic. This showcases the flexibility of the `qlm_code()` function and the `qlm_codebook()` framework in `quallmer` for various text analysis tasks.
