--- a/vignettes/pkgdown/examples/codebook_sentiment.Rmd
+++ b/vignettes/pkgdown/examples/codebook_sentiment.Rmd
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The `annotate()` function with a predefined `sentiment()` task allows you to rate the sentiment of texts using an LLM. The predefined `sentiment()` object structures the response with a numeric sentiment score from -1 (very negative) to 1 (very positive) and a brief explanation. 
+The `qlm_code()` function with the built-in `task_sentiment()` codebook allows you to rate the sentiment of texts using an LLM. The predefined `task_sentiment()` codebook structures the response with a numeric sentiment score from -1 (very negative) to 1 (very positive) and a brief explanation. 
 
 ### Loading packages and data
 
@@ -23,13 +23,13 @@ texts <- c(
 )
 ```
 
-### Using `annotate()` for predefined sentiment analysis of texts
+### Using `qlm_code()` for predefined sentiment analysis of texts
 
 ```{r sentiment}
-# Apply predefined sentiment task with task_sentiment() in the annotate() function
-result <- annotate(texts, task = task_sentiment(),
-                   model_name = "openai/gpt-4o",
-                   params = list(temperature = 0))
+# Apply predefined sentiment codebook with task_sentiment() in the qlm_code() function
+result <- qlm_code(texts, codebook = task_sentiment(),
+                   model = "openai/gpt-4o",
+                   temperature = 0)
 ```
 
 
@@ -44,24 +44,25 @@ result %>%
 
 ### Adjusting the sentiment task
 
-You can customize the sentiment analysis task by defining your own task with `task()` (for a more detailed explanation, [see our "Defining custom tasks" tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html)).
+You can customize the sentiment analysis task by defining your own codebook with `qlm_codebook()` (for a more detailed explanation, [see our "Defining custom tasks" tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html)).
 
 For example, you might want to include an additional field for confidence level.
 ```{r custom_sentiment}
-custom_sentiment <- task(
+custom_sentiment <- qlm_codebook(
   name = "Custom sentiment analysis",
-  system_prompt = "You are an expert annotator. Rate the sentiment of each text from -1 (very negative) to 1 (very positive), briefly explain why, and provide a confidence level from 0 to 1.",
-  type_def = ellmer::type_object(
+  instructions = "Rate the sentiment of each text from -1 (very negative) to 1 (very positive), briefly explain why, and provide a confidence level from 0 to 1.",
+  schema = ellmer::type_object(
     score = ellmer::type_number("Sentiment score between -1 (very negative) and 1 (very positive)"),
     explanation = ellmer::type_string("Brief explanation of the rating"),
     confidence = ellmer::type_number("Confidence level from 0 to 1")
   ),
+  role = "You are an expert annotator.",
   input_type = "text"
 )
-# Apply the custom sentiment task
-custom_result <- annotate(texts, task = custom_sentiment,
-                          model_name = "openai/gpt-4o",
-                          params = list(temperature = 0))
+# Apply the custom sentiment codebook
+custom_result <- qlm_code(texts, codebook = custom_sentiment,
+                          model = "openai/gpt-4o",
+                          temperature = 0)
 ```
 ```{r display_results_custom, echo = FALSE}
 # sentiment analysis results table
@@ -73,19 +74,20 @@ custom_result %>%
 ```
 Or, you might want to change the scoring scale to a 5-point Likert scale.
 ```{r likert_sentiment}
-likert_sentiment <- task(
+likert_sentiment <- qlm_codebook(
   name = "Likert scale sentiment analysis",
-  system_prompt = "You are an expert annotator. Rate the sentiment of each text on a scale from 1 (very negative) to 5 (very positive) and briefly explain why.",
-  type_def = ellmer::type_object(
+  instructions = "Rate the sentiment of each text on a scale from 1 (very negative) to 5 (very positive) and briefly explain why.",
+  schema = ellmer::type_object(
     score = ellmer::type_number("Sentiment score between 1 (very negative) and 5 (very positive)"),
     explanation = ellmer::type_string("Brief explanation of the rating")
   ),
+  role = "You are an expert annotator.",
   input_type = "text"
 )
-# Apply the Likert scale sentiment task
-likert_result <- annotate(texts, task = likert_sentiment,
-                          model_name = "openai/gpt-4o",
-                          params = list(temperature = 0))
+# Apply the Likert scale sentiment codebook
+likert_result <- qlm_code(texts, codebook = likert_sentiment,
+                          model = "openai/gpt-4o",
+                          temperature = 0)
 ```
 ```{r display_results_likert, echo = FALSE}
 # sentiment analysis results table
