--- a/vignettes/pkgdown/examples/codebook_stance.Rmd
+++ b/vignettes/pkgdown/examples/codebook_stance.Rmd
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The `annotate()` function with a predefined `task_stance()` task allows you to perform stance detection on texts regarding a specific topic. This position taking analysis classifies texts as Pro, Neutral, or Contra towards the given topic, along with a brief explanation. In this example, we will analyze a set of inaugural speeches to determine their stance on "Climate Change".
+The `qlm_code()` function with the built-in `task_stance()` codebook allows you to perform stance detection on texts regarding a specific topic. This position taking analysis classifies texts as Pro, Neutral, or Contra towards the given topic, along with a brief explanation. In this example, we will analyze a set of inaugural speeches to determine their stance on "Climate Change".
 
 ### Loading packages and data
 
@@ -25,14 +25,14 @@ library(quallmer)
 data_corpus_inaugural <- quanteda::data_corpus_inaugural[57:60]
 
 ```
-### Using `annotate()` for stance detection of texts
+### Using `qlm_code()` for stance detection of texts
 ```{r stance}
 # Define topic of interest
 topic <- "Climate Change"
-# Apply predefined stance task with task_stance() in the annotate() function
-result <- annotate(data_corpus_inaugural, task = task_stance(topic),
-                   model_name = "openai/gpt-4o",
-                   params = list(temperature = 0))
+# Apply predefined stance codebook with task_stance() in the qlm_code() function
+result <- qlm_code(data_corpus_inaugural, codebook = task_stance(topic),
+                   model = "openai/gpt-4o",
+                   temperature = 0)
 ```
 ```{r display_results, echo = FALSE}
 # stance detection results table
@@ -43,27 +43,28 @@ result %>%
   column_spec(3)
 ```
 ### Adjusting the stance detection task
-You can customize the stance detection task by defining your own task with `task()` (for a more detailed explanation, [see our "Defining custom tasks" tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html)).
+You can customize the stance detection task by defining your own codebook with `qlm_codebook()` (for a more detailed explanation, [see our "Defining custom tasks" tutorial](https://seraphinem.github.io/quallmer/articles/pkgdown/tutorials/customtask.html)).
 For example, you might want to include an additional field for confidence level.
 ```{r custom_stance}
-custom_stance <- task(
+custom_stance <- qlm_codebook(
   name = "Custom stance detection",
-  system_prompt = paste0(
-    "You are an expert annotator. Read each short text carefully and determine its stance towards ",
+  instructions = paste0(
+    "Read each short text carefully and determine its stance towards ",
     topic,
     ". Classify the stance as Pro, Neutral, or Contra, provide a brief explanation for your classification, and indicate your confidence level from 0 to 1."
   ),
-  type_def = ellmer::type_object(
+  schema = ellmer::type_object(
     stance = ellmer::type_string("Stance towards the topic: Pro, Neutral, or Contra"),
     explanation = ellmer::type_string("Brief explanation of the classification"),
     confidence = ellmer::type_number("Confidence level from 0 to 1")
   ),
+  role = "You are an expert annotator.",
   input_type = "text"
 )
-# Apply the custom stance task
-custom_result <- annotate(data_corpus_inaugural, task = custom_stance,
-                          model_name = "openai/gpt-4o",
-                          params = list(temperature = 0))
+# Apply the custom stance codebook
+custom_result <- qlm_code(data_corpus_inaugural, codebook = custom_stance,
+                          model = "openai/gpt-4o",
+                          temperature = 0)
 ```
 ```{r display_results_custom, echo = FALSE}
 # custom stance detection results table
@@ -75,24 +76,25 @@ custom_result %>%
 ```
 Or, you might want the LLM to extract specific arguments supporting the stance.
 ```{r argument_stance}
-argument_stance <- task(
+argument_stance <- qlm_codebook(
   name = "Argument-based stance detection",
-  system_prompt = paste0(
-    "You are an expert annotator. Read each short text carefully and determine its stance towards ",
+  instructions = paste0(
+    "Read each short text carefully and determine its stance towards ",
     topic,
     ". Classify the stance as Pro, Neutral, or Contra, provide a brief explanation for your classification, and list up to three key arguments supporting the stance."
   ),
-  type_def = ellmer::type_object(
+  schema = ellmer::type_object(
     stance = ellmer::type_string("Stance towards the topic: Pro, Neutral, or Contra"),
     explanation = ellmer::type_string("Brief explanation of the classification"),
     arguments = ellmer::type_string("Key arguments supporting the stance")
   ),
+  role = "You are an expert annotator.",
   input_type = "text"
 )
-# Apply the argument-based stance task
-argument_result <- annotate(data_corpus_inaugural, task = argument_stance,
-                            model_name = "openai/gpt-4o",
-                            params = list(temperature = 0))
+# Apply the argument-based stance codebook
+argument_result <- qlm_code(data_corpus_inaugural, codebook = argument_stance,
+                            model = "openai/gpt-4o",
+                            temperature = 0)
 ```
 ```{r display_results_argument, echo = FALSE}
 # argument-based stance detection results table
@@ -103,4 +105,4 @@ argument_result %>%
   column_spec(3)
 ```
 
-In this example, we demonstrated how to use the `stance()` task for stance detection on texts regarding "Climate Change". We also showed how to customize the task to include additional fields such as confidence level and key arguments supporting the stance. Now it is your turn to explore stance detection with your own texts and topics of interest!
+In this example, we demonstrated how to use the `task_stance()` codebook for stance detection on texts regarding "Climate Change". We also showed how to customize the codebook to include additional fields such as confidence level and key arguments supporting the stance. Now it is your turn to explore stance detection with your own texts and topics of interest!
