--- a/vignettes/pkgdown/examples/codebook_salience.Rmd
+++ b/vignettes/pkgdown/examples/codebook_salience.Rmd
@@ -7,7 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The `qlm_code()` function with the built-in `task_salience()` codebook can be used to identify and rank the salience of topics discussed in texts. In this example, we will demonstrate how to apply this codebook to a sample corpus of innaugural speeches from US presidents.
+The `qlm_code()` function with the built-in `codebook_salience()` codebook can be used to identify and rank the salience of topics discussed in texts. In this example, we will demonstrate how to apply this codebook to a sample corpus of innaugural speeches from US presidents.
 
 ### Loading packages and data
 
@@ -28,8 +28,8 @@ data_corpus_inaugural <- quanteda::data_corpus_inaugural[57:60]
 ### Using `qlm_code()` for salience of ANY topics discussed in texts
 ```{r salience}
 
-# Apply predefined salience codebook with task_salience() in the qlm_code() function
-result <- qlm_code(data_corpus_inaugural, codebook = task_salience(),
+# Apply built-in salience codebook with codebook_salience() in the qlm_code() function
+result <- qlm_code(data_corpus_inaugural, codebook = codebook_salience(),
                    model = "openai/gpt-4o",
                    temperature = 0)
 ```
@@ -46,8 +46,8 @@ result %>%
 
 # Define a list of topics to focus on
 topics <- c("economy", "health", "education", "environment", "foreign policy")
-# Apply predefined salience codebook with task_salience() in the qlm_code() function
-result <- qlm_code(data_corpus_inaugural, codebook = task_salience(topics),
+# Apply built-in salience codebook with codebook_salience() in the qlm_code() function
+result <- qlm_code(data_corpus_inaugural, codebook = codebook_salience(topics),
                    model = "openai/gpt-4o",
                    temperature = 0)
 ```
@@ -60,7 +60,7 @@ result %>%
   column_spec(3)
 ```
 
-### Adjusting the task_salience() so it also returns the stance for each topic
+### Adjusting the codebook_salience() so it also returns the stance for each topic
 ```{r custom_task}
 # Customizing the codebook to include the stance for each topic
 custom_codebook <- qlm_codebook(
@@ -108,4 +108,4 @@ custom_result %>%
   kable_styling(bootstrap_options = c("striped", "hover")) %>%
   column_spec(3)
 ```
-In this example, we demonstrated how to use the `task_salience()` codebook for identifying and ranking topics discussed in texts, both with and without a predefined list of topics. Additionally, we showed how to customize the codebook to include stance classification for each topic. This showcases the flexibility of the `qlm_code()` function and the `qlm_codebook()` framework in `quallmer` for various text analysis tasks.
+In this example, we demonstrated how to use the `codebook_salience()` codebook for identifying and ranking topics discussed in texts, both with and without a specified list of topics. Additionally, we showed how to customize the codebook to include stance classification for each topic. This showcases the flexibility of the `qlm_code()` function and the `qlm_codebook()` framework in `quallmer` for various text analysis tasks.
