--- a/vignettes/pkgdown/tutorials/built-in-codebooks.Rmd
+++ b/vignettes/pkgdown/tutorials/built-in-codebooks.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Using predefined tasks"
+title: "Using built-in codebooks"
 output: html_document
 ---
-You can use predefined tasks in `quallmer` to quickly set up common text analysis tasks without having to define them from scratch. For a list of available predefined tasks, see the [overview of predefined tasks](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.html). Each predefined task comes with an illustration on how to use and customize it.
+You can use built-in codebooks in `quallmer` to quickly set up common text analysis tasks without having to define them from scratch. For a list of available built-in codebooks, see the [overview of built-in codebooks](https://seraphinem.github.io/quallmer/articles/pkgdown/examples/overview.html). Each built-in codebook comes with an illustration on how to use and customize it.
