--- a/vignettes/pkgdown/tutorials/validate.Rmd
+++ b/vignettes/pkgdown/tutorials/validate.Rmd
@@ -3,10 +3,24 @@ title: "Using the Validate App"
 output: html_document
 ---
 
-Our `quallmer` package includes the Validate App, a user-friendly interface that allows researchers to manually code data, review LLM-generated annotations, and calculate inter-rater reliability scores such as Krippendorff's alpha and Fleiss' kappa or compare LLM-annotations against a gold standard for accuracy scores. This tutorial will guide you through the steps of using the Validate App effectively. If you prefer to work programmatically, we also provide instructions on how to calculate agreement scores by simply using the `validate()` function at the end of this tutorial.
+The Validate App is a user-friendly interface that allows researchers to manually code data, review LLM-generated annotations, and calculate inter-rater reliability scores such as Krippendorff's alpha and Fleiss' kappa or compare LLM-annotations against a gold standard for accuracy scores. This tutorial will guide you through the steps of using the Validate App effectively. If you prefer to work programmatically, we also provide instructions on how to calculate agreement scores by simply using the `qlm_validate()` or `qlm_compare()` functions at the end of this tutorial.
+
+## Installation
+
+The Validate App is available in the companion package `quallmer.app`. To install it:
+
+```r
+# install.packages("pak")
+pak::pak("SeraphineM/quallmer.app")
+```
 
 ## Launching the Validate App
-To launch the Validate App, you can use the `validate_app()` function from the `quallmer` package. Make sure you have the package loaded in your R environment. Then, simply call the `validate_app()` function. This will open the Validate App in a new window or tab in your web browser.
+To launch the Validate App, load the `quallmer.app` package and call the `validate_app()` function. This will open the Validate App in a new window or tab in your web browser.
+
+```r
+library(quallmer.app)
+validate_app()
+```
 
 ## Using the Validate App for manual coding
 
@@ -41,29 +55,32 @@ After completing the manual coding and reviewing the LLM-generated annotations, 
 
 ## Calculating validation scores without the App
 
-In addition to using the Agreement App, you can also calculate agreement scores programmatically using the `validate()` function from the `quallmer` package. This function allows you to specify your dataset, the column containing unit IDs, and the columns containing coder annotations. 
+In addition to using the Validate App, you can also calculate agreement and validation scores programmatically using functions from the `quallmer` package.
 
-Here's an example of how to use the `validate()` function if you **do not have a gold standard available** and want to assess inter-coder reliability between multiple coders or LLM runs:
+### Comparing multiple coders (inter-coder reliability)
+
+If you **do not have a gold standard available** and want to assess inter-coder reliability between multiple `qlm_coded` objects (from different coders, models, or coding runs), use `qlm_compare()`:
 
 ```.r
-results <- validate(
-  data        = your_data,
-  unit_id_col = "doc_id",
-  coder_cols  = c("coder1", "coder2", "llm_run1", "llm_run2"),
-  mode        = "icr"
-)
-results
+# Compare two or more qlm_coded objects
+comparison <- qlm_compare(coded_run1, coded_run2, coded_run3)
+comparison
 ```
-This will return the calculated validation scores based on the specified coders or LLM runs.
 
-If you **have a gold standard available** and want to assess accuracy of LLM-generated annotations against the gold standard, you can use the `validate()` function as follows:
+This will compute agreement metrics including Krippendorff's alpha, Cohen's kappa, and Fleiss' kappa.
+
+### Validating against a gold standard
+
+If you **have a gold standard available** and want to assess accuracy of LLM-generated annotations against the gold standard, use `qlm_validate()`:
+
 ```.r
-results <- validate(
-  data        = your_data,
-  unit_id_col = "doc_id",
-  coder_cols  = c("llm_run1", "manual_gold"),
-  mode        = "gold",
-  gold_col    = "manual_gold"
+# Validate LLM coding against gold standard
+validation <- qlm_validate(
+  coded_object = llm_coded_result,
+  gold_standard = gold_standard_data,
+  gold_column = "manual_code"
 )
-results
+validation
 ```
+
+This will compute classification metrics including accuracy, precision, recall, F1-score, and Cohen's kappa.
