make examples work

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 
 The **quallmer** package is an **easy-to-use toolbox to quickly apply AI-assisted qualitative coding to large amounts of texts, images, pdfs, tabular data and other structured data.**
 
-Using `qlm_code()`, users can apply codebook-based qualitative coding powered by large language models (LLMs) to generate structured, interpretable outputs. The package includes built-in codebooks for common applications and allows researchers to create custom codebooks tailored to their specific research questions using `qlm_codebook()`. To ensure quality and reliability of AI-generated coding, **quallmer** provides `qlm_compare()` for evaluating inter-rater reliability and `qlm_validate()` for assessing accuracy against gold standards. With `qlm_replicate()`, researchers can systematically compare results across different models and settings to assess sensitivity and reproducibility. 
+Using `qlm_code()`, users can apply codebook-based qualitative coding powered by large language models (LLMs) to generate structured, interpretable outputs. The package includes built-in codebooks for common applications and allows researchers to create custom codebooks tailored to their specific research questions using `qlm_codebook()`. To ensure quality and reliability of AI-generated coding, **quallmer** provides `qlm_compare()` for evaluating inter-rater reliability and `qlm_validate()` for assessing accuracy against gold standards. With `qlm_replicate()`, researchers can systematically compare results across different models and settings to assess sensitivity and reproducibility. The quallmer trail system automatically captures provenance metadata for full workflow traceability using `qlm_trail()` and related functions.
 
 **The quallmer package makes AI-assisted qualitative coding accessible without requiring deep expertise in R, programming or machine learning.**
 
@@ -38,7 +38,7 @@ Using `qlm_code()`, users can apply codebook-based qualitative coding powered by
 - Extensible framework allows researchers to define domain-specific coding schemes.
 
 #### `qlm_code()`
-- Applies LLM-based coding to qualitative data using a codebook specification.
+- Applies LLM-based coding to qualitative data using a `qlm_codebook`.
 - Works with any LLM supported by [ellmer](https://ellmer.tidyverse.org/index.html).
 - Returns a `qlm_coded` object containing the coded results and metadata for reproducibility.
 
@@ -60,7 +60,7 @@ Using `qlm_code()`, users can apply codebook-based qualitative coding powered by
 - Enables systematic assessment of coding reliability and sensitivity to model choices.
 
 
-## Provenance tracking
+## The quallmer trail
 
 All `qlm_coded`, `qlm_comparison`, and `qlm_validation` objects automatically capture provenance metadata including model parameters, timestamps, and parent-child relationships. This enables full workflow traceability and reproducibility.
 
